# rt-iot

./: .gitignore  pyproject.toml
data/: .md  plantilla_informe.docx
docs/: main.tex
docs/Bibliography/: bibliography.bib
docs/Sections/: conclussions.tex  context.tex  data-preparation.tex  eda.tex  modeling.tex  training.tex
models/training/: LabelEncoder.joblib  X_encoded.joblib  y_test.joblib  y_train.joblib
src/notebooks/: 000.ipynb  001.ipynb  002.ipynb  003.ipynb  004.ipynb  005.ipynb
src/utils/: rootdir.py
